# clapper

./: .editorconfig  .gitignore  .pre-commit-config.yaml  AGENTS.md  Brewfile  LICENSE  README.md  mise.toml  pyproject.toml
scripts/: codex-maintenance.sh  codex-setup.sh  mise-postinstall.sh
src/clapper/: __init__.py  cli.py  detection.py  events.py  process.py  test_tone.py
src/sounddevice/: __init__.pyi
tests/: __init__.py  audio_samples.py  test_clapper.py  test_cli.py  test_detection.py  test_events.py
