[project]
name = "clapper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
  { name = "Rob Hanlon", email = "69870+robhanlon22@users.noreply.github.com" },
]
requires-python = ">=3.14"
dependencies = []

[project.scripts]
clapper = "clapper:main"

[build-system]
requires = ["uv_build>=0.9.8,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "ruff>=0.14.6",
]
